# Menti.Co

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Makefile  README.md  compose.dev.yml  design.md  docker-compose.local-only.yml  docker-compose.yml  package-lock.json  package.json  test-atlas.js
.github/workflows/: codeql.yml
apps/api/: package.json
apps/api/src/: index.ts
apps/api/src/config/: db.ts
apps/api/src/middleware/: auth.ts
apps/api/src/models/: AuditLog.ts  Condition.ts  ContentRevision.ts  Doctor.ts
apps/api/src/realtime/: contentStream.ts
apps/web/: package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx  styles.css
apps/worker/: package.json
apps/worker/src/: index.ts
backend/: init.sql
backend/api/: Dockerfile  config.py  dependencies.py  main.py  models.py  pyproject.toml
backend/api/routers/: ai.py  disorders.py  papers.py
backend/api/services/: llm.py
backend/scripts/: ingest_pubmed.py  migrate_db.py  pyproject.toml  test_db.py  test_elastic.py  test_qdrant.py
backend/supabase/migrations/: 0001_initial.sql
backend/worker/: Dockerfile  pyproject.toml  worker.py
frontend/web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/web/app/: layout.tsx  page.tsx  styles.css
frontend/web/components/: AiAgent.tsx  BentoCard.tsx  Disclaimer.tsx  DisorderLibrary.tsx  Footer.tsx  Header.tsx  NearestPractitioner.tsx  PaperCard.tsx  SafeSpaceJournal.tsx
scratch/: test_connections.py
skills/: claude-ui-implementation-workflow.md
(+6 files in other folders)
