[project]
name = "api"
version = "0.1.0"
description = "Menti.Co Mental Health Research Library API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.0",
    "psycopg[binary]>=3.3.3",
    "psycopg-pool>=3.2.6",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
    "uvicorn>=0.46.0",
]
